Projet To-do List

--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
     <body>
            <div>
                 <h2>Bienvenue à l'application To-do List</h2>
-                <input type="text" id="task" placeholder="Ajouter une tache">
+                <input type="text" id="task" placeholder="Ajouter une tâche">
                 <button onclick="validateForm()">Ajouter</button>
                 <h3>La liste des Taches:</h3>
                 <ul id="task-list">
-
                 </ul>
            </div>
             <script src="script.js"></script>
